<resources>
    <string name="app_name">QuickCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="india_s_original_grocery_app">India\'s original grocery app</string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="we_have_sent_a_verification_code_to">We have sent a verification code to</string>
    <string name="_91">+91</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="bestsellers">BestSellers</string>
    <string name="shop_by_categories">Shop By Categories</string>
    <string name="vegetable_and_fruits">Vegetable and Fruits</string>
    <string name="we_have_sent_a_verification_code_t">We have sent a verification code to</string>
    <string name="india_s_last_minute_app">India\'s Last minute app</string>
    <string name="cart">cart</string>
    <string name="quick">Quick</string>
    <string name="a_young_startup">A young Startup</string>
    <string name="no_products_added_in_this_category">No Products Added in this category!</string>
    <string name="bill_details">Bill Details</string>
    <string name="sub_total">Sub Total</string>
    <string name="_179">179</string>
    <string name="todo">TODO</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="free">Free</string>
    <string name="grand_total">Grand Total</string>
    <string name="_199">199</string>
    <string name="phonepe_upi">PhonePe UPI</string>
    <string name="place_order">Place Order</string>
    <string name="_0">0</string>
    <string name="item">ITEM</string>
    <string name="next">Next</string>
    <string name="Continue">Continue</string>
    <string name="no_products_added_in_this_category_">No Products Added in this category!</string>
    <string name="search_">Search....</string>
    <string name="my_account">My account</string>
    <string name="_91_12121212">+91 12121212</string>
    <string name="your_information">YOUR Information</string>
    <string name="your_orders">Your Orders</string>
    <string name="address_book">Address Book</string>
    <string name="log_out">Log Out</string>
    <string name="your_address">Your Address</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="pin_code">Pin code</string>
    <string name="phone_no">Phone No</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="enter_address_city_sector_etc">Enter address (city,sector etc.)</string>
    <string name="add">Add</string>
    <string name="a_young_startup_">A young Startup</string>
    <string name="india_s_last_minute_app_">India\'s Last minute app</string>
    <string name="india_s_original_grocery_app_">India\'s original grocery app</string>
    <string name="login_or_sign_up_">Login or Sign up</string>
    <string name="loading">Loading..</string>
    <string name="mgf_shopping_mall_buy_your_daily_needed_material_form_here">MGF Shopping Mall Buy your daily needed material form here</string>
    <string name="_300ml">300ml</string>
    <string name="hp">-</string>
    <string name="sum">+</string>
    <string name="vegetable_and_fruits_">Vegetable and Fruits</string>
    <string name="_25">₹25</string>
    <string name="_0__">0</string>
    <string name="_500">₹500</string>
    <string name="_9923e320">9923e320</string>
    <string name="delivered">Delivered</string>
    <string name="_9923e320_">9923e320</string>
    <string name="_1">1</string>
    <string name="_50">₹50</string>
    <string name="_100g">100g</string>
    <string name="mgf_shoping_mall">MGF Shoping Mall</string>
    <string name="_1_">+1</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>
    <string name="see_all">See all</string>
    <string name="you_have_not_ordered_anything_yet">You have not ordered anything yet !</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="login_">Login</string>
    <string name="we_have_sent_a_verification_code_to_">We have sent a verification code to</string>
    <string name="search__">Search</string>
    <string name="bestsellers_">BestSellers</string>
    <string name="shop_by_categories_">Shop By Categories</string>
    <string name="no_products_added_in_this_category__">No Products Added in this category!</string>
    <string name="products_in_the_cart">Products in the cart</string>
    <string name="_0_">0</string>
    <string name="item_">ITEM</string>
    <string name="space" />
</resources>