<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSearchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Profile " />

    <View
        android:id="@+id/catView"
        android:layout_width="match_parent"
        android:layout_height="1.30dp"
        android:background="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbSearchFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:textColor="@color/black"
            android:textSize="23.40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etMob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.50dp"
            android:text="@string/_91_12121212"
            android:textColor="@color/black"
            android:textSize="19.50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19.50dp"
            android:text="@string/your_information"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15.50sp" />

        <LinearLayout
            android:id="@+id/llOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="6.50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ordered_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:layout_weight="0.9"
                android:text="@string/your_orders"
                android:textColor="@color/black"
                android:textSize="16.90sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_weight="0.1"
                android:src="@drawable/baseline_navigate_next_24"
                android:contentDescription="@string/todo"
                app:tint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="6.50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/del_vehicle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:layout_weight="0.9"
                android:text="@string/address_book"
                android:textColor="@color/black"
                android:textSize="16.90sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_weight="0.1"
                android:src="@drawable/baseline_navigate_next_24"
                android:contentDescription="@string/todo"
                app:tint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="6.50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/baseline_exit_to_app_24"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:layout_weight="0.9"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:textSize="16.90sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/todo"
                android:src="@drawable/baseline_navigate_next_24"
                app:tint="@color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>