<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2.6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProduct"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:background="@drawable/bg_category"
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        app:cardCornerRadius="13dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13.00dp"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/ivImageSlider"
                android:layout_width="wrap_content"
                android:layout_height="156dp"
                app:iss_auto_cycle="false"
                app:iss_text_align="CENTER" />

            <TextView
                android:id="@+id/tvProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/mgf_shopping_mall_buy_your_daily_needed_material_form_here"
                android:textColor="#6f6f6f"
                android:textSize="16.60sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_300ml"
                    android:id="@+id/productQuantity"
                    android:textColor="#6f6f6f"
                    android:textSize="15.60sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvProductPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25"
                        android:textColor="@color/black"
                        android:textSize="15.60sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAdd"
                        android:layout_width="80.00dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_btn_bg"
                        android:gravity="center"
                        android:padding="7.20dp"
                        android:text="@string/add"
                        android:textColor="@color/green"
                        android:textSize="14.30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:visibility="gone"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="30dp"
                        android:weightSum="3"
                        android:background="@drawable/procut_count_bg"
                        android:gravity="center"
                        android:id="@+id/llProductCount"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvDecrementCount"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"
                            android:textSize="19.50sp"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="30dp"
                            android:background="@color/white"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:layout_marginBottom="@dimen/_2sdp"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvProductCount"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/_0__"
                            android:textColor="#FFFFFF"
                            android:textSize="19.50sp"/>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="30dp"
                            android:background="@color/white"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:layout_marginBottom="@dimen/_2sdp"
                            />



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvIncrementCount"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sum"
                            android:textColor="#FFFFFF"
                            android:textSize="19.50sp"/>


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>