<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130.00dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="9.10dp"
    android:layout_marginEnd="2.6dp"
    android:layout_marginTop="2.6dp">

    <LinearLayout
        android:id="@+id/llProductsImages"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_95sdp"
        android:background="@drawable/bg_bestsellers"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="58.50dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivProduct1"
                android:layout_width="52.00dp"
                android:layout_height="52.00dp"
                android:layout_margin="6.50dp"
                android:layout_weight="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/app_logo"
                android:background="@drawable/bg_bproduct"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/ivProduct2"
                android:layout_width="52.00dp"
                android:layout_height="52.00dp"
                android:layout_margin="6.50dp"
                android:layout_weight="0.5"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_bproduct"
                android:contentDescription="@string/todo"
                android:src="@drawable/app_logo"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="58.50dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivProduct3"
                android:layout_width="52.00dp"
                android:layout_height="52.00dp"
                android:layout_margin="6.50dp"
                android:background="@drawable/bg_bproduct"
                android:src="@drawable/app_logo"
                android:scaleType="centerCrop"
               android:layout_weight="0.5"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvProductCount"
                android:layout_width="52.00dp"
                android:layout_height="52.00dp"
                android:layout_margin="6.50dp"
                android:background="@drawable/bg_bproduct"
                android:gravity="center"
                android:text="@string/_1_"
                android:textColor="@color/black"
                android:textSize="23.40sp"
                android:textStyle="bold"
                android:layout_weight="0.5" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/llProductsImages"
        app:layout_constraintTop_toBottomOf="@id/llProductsImages">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.90dp"
            android:layout_weight="0.5"
            android:layout_marginBottom="2dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="14.30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="0.5"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="14.30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSeeAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.90dp"
            android:layout_weight="0.5"
            android:background="@drawable/see_all_bg"
            android:gravity="center"
            android:padding="5.20dp"
            android:text="@string/see_all"
            android:textColor="@color/green"
            android:layout_marginBottom="13dp"
            android:textSize="14.30sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>