<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="6.50dp"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="13.00dp"
        android:text="@string/please_enter_your_address"
        android:textColor="@color/black"
        android:textSize="18.20sp"
        android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinCode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPinCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="9.10dp"
                        android:hint="@string/pin_code"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_no"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/state"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="9.10dp"
                        android:hint="@string/state"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/district"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDistrict"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/district"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                android:layout_marginTop="1.30dp"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="9.10dp"
                    android:hint="@string/enter_address_city_sector_etc"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="58.50dp"
                android:layout_gravity="center"
                android:layout_margin="18.00dp"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="6.50dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/add"
                android:id="@+id/btnAddAddress"
                android:textSize="28sp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="10.40dp" />


        </LinearLayout>


</LinearLayout>